@@ -6,10 +6,13 @@
 
 #include <qlayout.h>
 
+#include <khtml.h>
+
 #include "kproptext.h"
 #include "kpropradio.h"
 #include "kpropgroup.h"
 #include "kpropfont.h"
+#include "kpropcolor.h"
 
 SettingsDlg::SettingsDlg()
 :KPropDlg(KPropDlg::TREE, KPropDlg::OK | KPropDlg::CANCEL | KPropDlg::APPLY,
@@ -20,8 +23,14 @@ SettingsDlg::SettingsDlg()
   
   fontsFrame = addPage(-1, i18n("Fonts"));
   setupFontsTab();
+  
+  colorsFrame = addPage(-1, i18n("Colors"));
+  setupColorsTab();
 
   emit getConfig();
+
+  setMinimumSize(600, 250);
+  adjustSize();
   
   showPage(miscFrame);
 }
@@ -45,13 +54,9 @@ void SettingsDlg::setupMiscTab()
   layout->addWidget(groupHomePage);
   
   QLabel *l = new QLabel(i18n("Clicking the Home button brings you to this page."), groupHomePage);
-  l->adjustSize();
-  l->setMinimumSize(l->sizeHint());
   groupHomePage->addWidget(l);
   
   KPropText *homePage = new KPropText(groupHomePage, i18n("Location:"), 70, "HomePage", "Personal Settings");
-  homePage->adjustSize();
-  homePage->setMinimumSize(homePage->sizeHint());  
   connectConfig(homePage);
   groupHomePage->addWidget(homePage);
   
@@ -75,4 +80,25 @@ void SettingsDlg::setupFontsTab()
   KPropFont *fixedFont = new KPropFont(fontsFrame, "KoHTML", i18n("Fixed Font"), 50, QFont("courier"), "FixedFont", "Fonts");
   connectConfig(fixedFont);
   layout->addWidget(fixedFont);  
+}
+
+void SettingsDlg::setupColorsTab()
+{
+  QVBoxLayout *layout = new QVBoxLayout(colorsFrame, 4);
+
+  KPropColor *bgColor = new KPropColor(colorsFrame, i18n("Background Color"), 50, white, "BackgroundColor", "Colors");
+  connectConfig(bgColor);
+  layout->addWidget(bgColor);  
+  
+  KPropColor *lnkColor = new KPropColor(colorsFrame, i18n("URL Link Color"), 50, red, "LinkColor", "Colors");
+  connectConfig(lnkColor);
+  layout->addWidget(lnkColor);  
+  
+  KPropColor *txtColor = new KPropColor(colorsFrame, i18n("Normal Text Color"), 50, black, "TextColor", "Colors");
+  connectConfig(txtColor);
+  layout->addWidget(txtColor);  
+  
+  KPropColor *vlnkColor = new KPropColor(colorsFrame, i18n("Followed Link Color"), 50, magenta, "VLinkColor", "Colors");
+  connectConfig(vlnkColor);
+  layout->addWidget(vlnkColor);  
 }
